--- a/digital.html
+++ b/digital.html
@@ -37,8 +37,17 @@
         <div class="navBar pull-right">
             <div class="navBarChoices ">
                 <ul>
+                    <li><a class="" >Services <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                        <ul>
+                            <li><a class="" ><i class="fa fa-ravelry" aria-hidden="true"></i> <span>Logo &amp Branding</span></a></li>
+                            <li><a class="" ><i class="fa fa-desktop" aria-hidden="true"></i> <span>Website Development</span></a></li>
+                            <li><a class="" ><i class="fa fa-mobile" aria-hidden="true"></i> <span>Moble App Development</span></a></li>
+                            <li><a class="" ><i class="fa fa-search" aria-hidden="true"></i> <span>Search Engine Optimization</span></a></li>
+                            <li><a class="" ><i class="fa fa-mouse-pointer" aria-hidden="true"></i> <span>Pay-Per-Click</span></a></li>
+                            <li><a class="" ><i class="fa fa-folder-o" aria-hidden="true"></i> <span>Social Media Marketing</span></a></li>
+                        </ul>
+                    </li>
                     <li><a class="" >Portfolio</a></li>
-                    <li><a class="" >Services <i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
                     <li><a class="" >Case Studies</a></li>
                     <li><a class="" >About</a></li>
                     <li><a class="" >Blog</a></li>
@@ -52,7 +61,16 @@
     </div>
     <div class="mainDrop">
         <ul>
-            <li><a>Services <i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+            <li><a>Services <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                 <ul>
+                    <li><a class="" ><i class="fa fa-ravelry" aria-hidden="true"></i> <span>Logo &amp Branding</span></a></li>
+                    <li><a class="" ><i class="fa fa-desktop" aria-hidden="true"></i> <span>Website Development</span></a></li>
+                    <li><a class="" ><i class="fa fa-mobile" aria-hidden="true"></i> <span>Moble App Development</span></a></li>
+                    <li><a class="" ><i class="fa fa-search" aria-hidden="true"></i> <span>Search Engine Optimization</span></a></li>
+                    <li><a class="" ><i class="fa fa-mouse-pointer" aria-hidden="true"></i> <span>Pay-Per-Click</span></a></li>
+                    <li><a class="" ><i class="fa fa-folder-o" aria-hidden="true"></i> <span>Social Media Marketing</span></a></li>
+                </ul>
+            </li>
             <li><a>Portfolio</a></li>
             <li><a>Case Studies</a></li>
             <li><a>About</a></li>
